# uav-assesment

./: .gitignore  Dockerfile  run_mavros.sh  run_sitl.sh
.github/workflows/: ci.yml
src/candidate_package/: package.xml  setup.cfg  setup.py
src/candidate_package/candidate_package/: control.py
src/test_package/: package.xml  setup.cfg  setup.py
src/test_package/test/: conftest.py  test_copyright.py  test_flake8.py  test_pep257.py  test_task_1_arm_disarm.py  test_task_2_takeoff_land.py
