<?xml version="1.0"?>
<package format="3">
  <name>candidate_package</name>
  <version>0.0.0</version>
  <description>Candidate code to be graded</description>
  <maintainer email="hr@example.com">Assessment</maintainer>
  <license>MIT</license>
  
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
